# vencimientos-sap

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  requirements.txt  vercel.json
.github/workflows/: ci.yml
app/: main.py
app/models/: expiration.py
app/parsers/: ewa_parser.py  text_extractor.py
app/services/: document_intelligence.py  ewa_analysis_service.py  excel_service.py
app/utils/: dates.py  settings.py
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/api/: routes.py
backend/app/models/: expiration.py
backend/app/parsers/: text_extractor.py
backend/app/services/: ai_usage_repository.py  component_catalog.py  consolidation_service.py  document_intelligence.py  ewa_analysis_service.py  excel_service.py  ocr_service.py  workbook_merge_service.py
backend/app/utils/: settings.py
backend/tests/integration/: test_ewa_analyze_api.py
backend/tests/unit/: test_ai_usage_repository.py  test_component_catalog.py  test_consolidation_service.py  test_document_intelligence.py  test_ewa_analysis_service.py  test_excel_service.py  test_settings.py  test_text_extractor.py  test_workbook_merge_service.py
docs/architecture/: overview.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
frontend/src/: App.vue  styles.css
tests/integration/: test_ewa_analyze_api.py
tests/unit/: test_date_utils.py  test_document_intelligence.py  test_ewa_analysis_service.py  test_excel_service.py  (+1 more)
vencimientos_sap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+18 files in other folders)
